# jetsocket

./: .gitignore  Makefile  README.md  SECURITY_AUDIT.md  mkdocs.yml  mypy.ini  pyproject.toml  ruff.toml  setup.py
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md
docs/assets/stylesheets/: extra.css
docs/examples/: binance-trades.md  index.md  llm-streaming.md  multi-symbol-dashboard.md  sync-scripting.md
docs/getting-started/: basic-concepts.md  installation.md  quickstart.md
docs/reference/: changelog.md
docs/reference/api/: config.md  events.md  exceptions.md  manager.md  multiplex.md  pool.md  presets.md  sync-client.md  typed.md
docs/user-guide/: async-api.md  connection-pool.md  heartbeat.md  message-buffering.md  multiplexing.md  reconnection.md  sync-api.md  typed-messages.md
examples/: README.md  binance_trades.py  llm_streaming.py  multi_symbol_dashboard.py  sync_simple.py
rust/: Cargo.toml
rust/benches/: compression.rs  frame_parsing.rs  masking.rs
rust/benches/common/: mod.rs
rust/fuzz/: Cargo.toml
rust/fuzz/corpus/frame_parse/: binary_small
rust/fuzz/corpus/handshake_parse/: error_403  valid_101
rust/fuzz/fuzz_targets/: fuzz_compress.rs  fuzz_frame_parse.rs  fuzz_frame_roundtrip.rs  fuzz_handshake_parse.rs
rust/src/: buffer.rs  compress.rs  errors.rs  frame.rs  handshake.rs  lib.rs  mask.rs
src/jetsocket/: __init__.py  _core.pyi  _core.pyx  buffer.py  events.py  exceptions.py  heartbeat.py  manager.py  multiplex.py  pool.py  presets.py  state.py  stats.py  sync_client.py  typed.py  types.py
src/jetsocket/transport/: __init__.py  _async.py  _sync.py  base.py
src/wsfabric/: __init__.py  _core.pyi  _core.pyx  _core_fallback.py  backoff.py  buffer.py  events.py  exceptions.py  heartbeat.py  manager.py  multiplex.py  pool.py  presets.py  state.py  stats.py  sync_client.py  typed.py  types.py
src/wsfabric/transport/: __init__.py  _async.py  _sync.py  base.py  uri.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_manager_lifecycle.py  test_transport.py
tests/integration/exchanges/: conftest.py  test_binance.py  test_bybit.py  test_coinbase.py  test_kraken.py  test_okx.py
tests/integration/providers/: test_openai_realtime.py
tests/security/: test_close_handshake.py  test_dos_protection.py  test_frame_injection.py  test_handshake_security.py  test_input_validation.py  test_tls_config.py
tests/stress/: conftest.py  test_endurance.py  test_memory_leaks.py  test_rapid_reconnect.py  test_throughput.py
tests/unit/: __init__.py  test_async_transport_io.py  test_backoff.py  test_bench_comparison.py  test_benchmarks.py  test_buffer.py  test_buffer_extended.py  test_compress.py  test_core_fallback.py  test_core_fallback_extended.py  test_events.py  test_exceptions.py  test_heartbeat.py  test_manager.py  test_manager_extended.py  test_manager_io.py  test_multiplex.py  test_pool.py  test_presets.py  test_python_ringbuffer.py  test_replay.py  test_state.py  test_stats.py  test_sync_client.py  test_sync_client_extended.py  test_sync_transport_io.py  test_transport_base.py  test_transport_extended.py  test_typed.py  test_typed_extended.py  test_types.py  test_uri.py
