[build-system]
requires = ["setuptools>=68.0", "Cython>=3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wsfabric"
version = "0.1.0"
description = "Production-grade, resilient WebSocket library for Python with Cython-powered performance"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Omid Roshani", email = "hello@omid.ai" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Cython",
    "Framework :: AsyncIO",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["websocket", "async", "trading", "llm", "streaming", "resilient"]
dependencies = []

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]
orjson = ["orjson>=3.9"]
uvloop = ["uvloop>=0.19; sys_platform != 'win32'"]
truststore = ["truststore>=0.8"]
all = ["pydantic>=2.0", "orjson>=3.9", "uvloop>=0.19; sys_platform != 'win32'", "truststore>=0.8"]

[project.urls]
Homepage = "https://github.com/omidroshani/wsfabric"
Documentation = "https://github.com/omidroshani/wsfabric#readme"
Repository = "https://github.com/omidroshani/wsfabric"
Issues = "https://github.com/omidroshani/wsfabric/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wsfabric = ["_core.pyx", "py.typed", "_core.pyi"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-benchmark>=5.0",
    "mypy>=1.13",
    "ruff>=0.8",
    "Cython>=3.0",
    "websockets>=14.0",
    "websocket-client>=1.8",
    "hypothesis>=6.0",
    "picows>=1.17.0",
    "aiohttp>=3.13.3",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-autorefs>=1.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-m", "not stress and not exchange and not llm",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
    "benchmark: marks benchmark tests",
    "exchange: marks exchange integration tests (require network)",
    "network: marks tests requiring network access",
    "llm: marks LLM provider tests (require API keys)",
    "stress: marks stress tests (long running)",
    "security: marks security audit tests",
]

[tool.mypy]
strict = true
python_version = "3.10"

[[tool.mypy.overrides]]
module = "pydantic"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/wsfabric"]
branch = true
omit = ["*/tests/*", "*/_core.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
]
fail_under = 80
