[package]
name = "wsfabric-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Rust core for wsfabric WebSocket library"
license = "MIT"
publish = false

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
base64 = "0.22"
sha1 = "0.10"
rand = "0.8"
thiserror = "2.0"
simdutf8 = "0.1"

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[[bench]]
name = "frame_parsing"
harness = false

[[bench]]
name = "masking"
harness = false

[[bench]]
name = "compression"
harness = false

[profile.dev]
opt-level = 1

